--- a/config.yml
+++ b/config.yml
@@ -3,6 +3,11 @@ paginate: 5
 languageCode: en-us
 theme: "PaperMod" 
 
+module:
+  imports:
+    - path: github.com/adityatelange/hugo-PaperMod
+
+
 enableInlineShortcodes: true
 enableRobotsTXT: true
 buildDrafts: true
